# seacliff

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: tests.yaml
configs/: exp.yaml  noise.yaml  psf.yaml  wcs.yaml
seacliff/: __init__.py  noise.py  rubin_noise.py  rubin_psf.py  rubin_sky_wcs.py  rubinwcs.py  testing.py  utils.py
seacliff/config/: __init__.py  input.py  noise.py  psf.py  wcs.py
seacliff/tests/: test_rubin_noise.py  test_rubin_psf.py  test_rubin_sky_wcs.py
tests/: test_config_noise.py  test_config_psf.py  test_config_wcs.py  test_rubin_noise.py  test_rubin_psf.py  test_rubin_sky_wcs.py  test_utils.py
tests/data/: cexp_bkg.fits  rubin_psf.fits
